--- a/roles/docker/main.yml
+++ b/roles/docker/main.yml
@@ -1,26 +1,36 @@
-- name: Install required system packages
-  dnf:
+- name: Install required packages
+  apt:
     name:
-      - dnf-utils
-      - device-mapper-persistent-data
-      - lvm2
+      - apt-transport-https
+      - ca-certificates
+      - curl
+      - gnupg
+      - lsb-release
+    state: present
+    update_cache: yes
+
+- name: Add Docker GPG key
+  ansible.builtin.shell: |
+    curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+  args:
+    creates: /usr/share/keyrings/docker-archive-keyring.gpg
+
+- name: Add Docker repository
+  apt_repository:
+    repo: "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu focal stable"
     state: present
 
-- name: Add Docker repo
-  get_url:
-    url: https://download.docker.com/linux/centos/docker-ce.repo
-    dest: /etc/yum.repos.d/docker-ce.repo
-
-- name: Install Docker
-  dnf:
+- name: Install Docker Engine
+  apt:
     name:
       - docker-ce
       - docker-ce-cli
       - containerd.io
     state: latest
+    update_cache: yes
 
 - name: Enable and start Docker
-  systemd:
+  service:
     name: docker
-    enabled: yes
     state: started
+    enabled: true
